# sessionbin

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  tox.ini
.claude/skills/e2e-test-runbook/: SKILL.md
src/sessionbin/: manage.py
src/sessionbin/adapters/: claude_code.py
src/sessionbin/conf/: asgi.py  middleware.py  urls.py  wsgi.py
src/sessionbin/conf/settings/: base.py  local.py  prod.py
src/sessionbin/pastes/: admin.py  api.py  apps.py  context_processors.py  forms.py  models.py  render.py  services.py  views.py
src/sessionbin/pastes/management/commands/: render.py
src/sessionbin/pastes/migrations/: 0001_initial.py
src/sessionbin/pastes/static/css/: style.css  transcript.css
src/sessionbin/pastes/templates/pastes/: base.html  landing.html  manage.html  paste.html  transcript.html
src/sessionbin/pastes/templatetags/: transcript.py
src/sessionbin/schema/: types.py
src/sessionbin/security/: redact.py
src/sessionbin/storage/: base.py  exceptions.py  factory.py  filesystem.py
tests/: conftest.py
tests/adapters/: test_claude_code.py
tests/fixtures/claude_code/: a1b2c3d4-e5f6-7890-abcd-ef1234567890.jsonl  f9e8d7c6-b5a4-3210-fedc-ba9876543210.jsonl
tests/pastes/: conftest.py  test_meta_tags.py  test_services.py  test_views.py
tests/render/: test_render.py
tests/security/: test_redact.py
tests/storage/: test_filesystem.py
