[project]
name = "sessionbin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-ninja>=1.4",
    "mistune>=3.1",
    "pygments>=2.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sessionbin"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "django-stubs>=6.0.0",
    "pytest>=9.0.3",
    "pytest-django>=4.11",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N"]

[tool.mypy]
mypy_path = "src"
plugins = ["mypy_django_plugin.main"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sessionbin.conf.settings.local"

[tool.django-stubs]
django_settings_module = "sessionbin.conf.settings.local"
